# pickhardtpayments

./: .gitgnore  .gitignore  .gitmodules  10_payments.json  CHANGELOG.md  LICENSE  MANIFEST.in  Resources.md  c-documentation.md  failing_payment_1.json  failing_payment_2.json  failing_payments.json  meson.build  payments_first_one_ok.json  python-documentation.md  readme.md  setup.py
benchmark/: analize.py  benchmark.py
docs/: requirements.txt
examples/: 4_nodes_5000_payments_10000_mean_amount.json  4_nodes_5000_payments_2000_mean_amount.json  ChannelDepletionSimulator.py  PickhardtPaymentsExample.ipynb  SimpleSimulation.ipynb  basicexample.py  channels.sample.json  simulation_example.py  simulationexample.py
pickhardtpayments/: Attempt.py  Channel.py  ChannelGraph.py  DijkstraOverPayment.py  OracleChannel.py  OracleLightningNetwork.py  Payment.py  __init__.py  (+4 more)
subprojects/MinCostFlow/: LICENSE  c-api.md  documentation.md  meson.build  readme.md
subprojects/MinCostFlow/benchmark/: benchmark-mcf.cpp  gen.py  meson.build  run.sh
subprojects/MinCostFlow/doc/: biblio.bib  info.tex  intro.tex  main.tex  makefile  proposal.tex  schedule.tex
subprojects/MinCostFlow/examples/: kattis-maxflow.cpp  kattis-mincostmaxflow.cpp  kattis-shortestpath1.cpp  meson.build
subprojects/MinCostFlow/include/: meson.build
subprojects/MinCostFlow/include/mincostflow/: graph.hpp  maxflow.hpp  meson.build  mincostflow.hpp  scope_guard.hpp  shortestpath.hpp  vectorized_map.hpp
subprojects/MinCostFlow/test/: max-flow.cpp  meson.build  min-cost-flow.cpp  short-path.cpp  vec-map.cpp
(+17 files in other folders)
