test('Vectorized Map',
    executable('vec-map','vec-map.cpp',
        dependencies: dep_mincostflow))

test('Shortest Path',
    executable('short-path','short-path.cpp',
        dependencies: dep_mincostflow))

test('Max Flow',
    executable('max-flow','max-flow.cpp',
        dependencies: dep_mincostflow))

test('Min Cost Max Flow',
    executable('min-cost-flow','min-cost-flow.cpp',
        dependencies: dep_mincostflow))
